fixed header padding on mobile layout

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -7,6 +7,8 @@ header{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     color:var(--third-light);
     background-color:var(--primary-color);
+    box-sizing: border-box;
+    padding:10px;
 }
 
 .header-title h1 {
